--- a/slides/12-lambda-calculus.tex
+++ b/slides/12-lambda-calculus.tex
@@ -406,9 +406,12 @@
 \begin{frame}
   \frametitle{Wrapup}
   \begin{itemize}
-  \item Lambda calculus contains the primitives of the theory of
-    recursive functions
-  \item The theory of recursive functions is Turing complete
+  \item Beta reduction is the only computation rule of lambda calculus
+  \item It applies anywhere in a lambda term
+  \item All datatypes can be expressed in lambda calculus
+  \item Lambda calculus is able to express the primitives of the
+    theory of partial recursive functions
+  \item The theory of partial recursive functions is Turing complete
   \item Hence is the (untyped) lambda calculus
   \end{itemize}
 \end{frame}
