--- a/slides/12-lambda-calculus.tex
+++ b/slides/12-lambda-calculus.tex
@@ -118,7 +118,7 @@
       & x\not\in\free(M) & \quad \text{Eta reduction}
     \end{alignat*}
   \end{block}
-  \begin{block}<+->{Reductions may be applied everywhere in a term}
+  \begin{block}<+->{Reductions may be applied anywhere in a term}
     \begin{displaymath}
     \begin{array}{c}
       M \rightarrow_x M'
