--- a/slides/00-intro.tex
+++ b/slides/00-intro.tex
@@ -16,7 +16,7 @@
 \begin{frame}[fragile]
   \frametitle{Coordinates}
   \begin{itemize}
-  \item \textbf{Course hours:}  Mo/We 14-16 Uhr, SR 01 016 (G.-Köhler-Allee 101)
+  \item \textbf{Course hours:}  Mo/We 14-16 Uhr, G.-Köhler-Allee 051 - R 03 026
   \item \textbf{Staff:} Prof.\ Dr.\ Peter Thiemann\\
 \begin{alltt}
 Gebäude 079, Raum 00-015
@@ -24,7 +24,7 @@ Telefon: 0761 203 -8051/-8247
 E-mail: thiemann@cs.uni-freiburg.de
 Web: \href{http://www.informatik.uni-freiburg.de/~thiemann}{http://www.informatik.uni-freiburg.de/~thiemann}
 \end{alltt}
-\item  \textbf{Staff:} Gabriel Radanne, Felix Karg\\
+\item  \textbf{Staff:} Gabriel Radanne\\
 \begin{alltt}
 Gebäude 079, Raum 00-014
 Telefon: 0761 203 -8053
@@ -32,11 +32,11 @@ E-mail: radanne@cs.uni-freiburg.de
 Web: \href{http://www.informatik.uni-freiburg.de/~radanne}{http://www.informatik.uni-freiburg.de/~radanne}
 \end{alltt}
   \item\textbf{Homepage:}\\ \footnotesize
-    \href{https://github.com/proglang/FunctionalProgramming2017}{
-      https://github.com/proglang/FunctionalProgramming2017}
+    \href{https://github.com/proglang/FunctionalProgramming}{
+      https://github.com/proglang/FunctionalProgramming}
     \\
-    \href{https://proglang.informatik.uni-freiburg.de/teaching/functional-programming/2017/}{
-      https://proglang.informatik.uni-freiburg.de/teaching/functional-programming/2017/}
+    \href{https://proglang.informatik.uni-freiburg.de/teaching/functional-programming/2019/}{
+      https://proglang.informatik.uni-freiburg.de/teaching/functional-programming/2019/}
   \end{itemize}
 \end{frame}
 
@@ -119,7 +119,7 @@ x = 5
 \end{verbatim}
     Variable \texttt{x} has value \texttt{5} forever
   \end{block}
-  \begin{block}<+->{Imperative (Java)}
+  \begin{block}<+->{Imperative (Java / C)}
 \begin{verbatim}
 int x = 5;
 ...
@@ -147,7 +147,7 @@ static int f (int x, int y) {
   return flag ? 2*x + y , 2*x - y;
 }
 
-f (42, 16); // who knows?
+int z = f (42, 16); // who knows?
 \end{verbatim}
     Return value  depends on non-local variable \texttt{flag}
   \end{block}
