--- a/slides/frontmatter.tex
+++ b/slides/frontmatter.tex
@@ -5,5 +5,5 @@
 
 \author[Peter Thiemann]{Prof. Dr. Peter Thiemann}
 \institute[Univ. Freiburg]{Albert-Ludwigs-Universität Freiburg, Germany}
-\date{WS 2017-2018}
+\date{SS 2019}
 
