--- a/slides/common.tex
+++ b/slides/common.tex
@@ -8,8 +8,10 @@
 \usepackage{pifont}
 \usepackage{color}
 \usepackage[utf8]{inputenc}
-\usepackage{german}
+%\usepackage{german}
 \usepackage{listings}
+\lstset{language=Haskell}
+\lstset{sensitive=true}
 \usepackage{hyperref}
 \hypersetup{colorlinks=true}
 \usepackage[final]{pdfpages}
