converted to listing

--- a/slides/01-starting-haskell.tex
+++ b/slides/01-starting-haskell.tex
@@ -393,11 +393,11 @@ euro :: Double -> Double
   A definition can be given a \textbf{type signature} which specifies
   its type
 \begin{block}{In Examples.hs}
-\begin{verbatim}
+\begin{lstlisting}
 -- |price of the game in USD
 price' :: Double
 price' = 79
-\end{verbatim}
+\end{lstlisting}
   \end{block}
 \begin{verbatim}
 *Main> :i price'
