--- a/slides/02-haskell-functions.tex
+++ b/slides/02-haskell-functions.tex
@@ -19,17 +19,17 @@
   \begin{block}<+->{Example: Absolute value}
     Find the absolute value of a number
     \begin{itemize}
-    \item if \texttt{x} is positive, result is \texttt{x}
-    \item if \texttt{x} is negative, result is \texttt{-x}
+    \item if \lstinline{x} is positive, result is \lstinline{x}
+    \item if \lstinline{x} is negative, result is \lstinline{-x}
     \end{itemize}
   \end{block}
   \begin{block}<+->{Definition}
-\begin{verbatim}
+\begin{lstlisting}
 -- returns the absolute value of x
 absolute :: Integer -> Integer
 absolute x | x >= 0 = x
 absolute x | x < 0  = - x
-\end{verbatim}
+\end{lstlisting}
   \end{block}
 \end{frame}
 
@@ -37,16 +37,16 @@ absolute x | x < 0  = - x
   \frametitle{Alternative styles of definition}
   
   \begin{block}{One equation}
-\begin{verbatim}
+\begin{lstlisting}
 absolute' x | x >= 0 = x
             | x < 0  = -x
-\end{verbatim}
+\end{lstlisting}
   \end{block}
   
   \begin{block}{Using if-then-else in an expression}
-\begin{verbatim}
+\begin{lstlisting}
 absolute'' x = if x >= 0 then x else -x
-\end{verbatim}
+\end{lstlisting}
   \end{block}
 \end{frame}
 
@@ -56,7 +56,7 @@ absolute'' x = if x >= 0 then x else -x
   (\textbf{no loops!})
   \begin{itemize}
   \item
-    Reduce a problem (e.g., \texttt{power x n}) to a smaller
+    Reduce a problem (e.g., \lstinline{power x n}) to a smaller
     problem of the same kind 
   \item Eventually reach a base case that can be solved immediately
   \item Build up solutions from smaller solutions
@@ -66,11 +66,11 @@ absolute'' x = if x >= 0 then x else -x
 \begin{frame}[fragile]
   \frametitle{Example: power}
   Compute \verb|x^n| without using the built-in operator
-\begin{verbatim}
+\begin{lstlisting}
 -- compute x to n-th power
 power x 0         = 1
 power x n | n > 0 = x * power x (n - 1)
-\end{verbatim}
+\end{lstlisting}
 \end{frame}
 
 \begin{frame}
@@ -100,12 +100,12 @@ power x n | n > 0 = x * power x (n - 1)
 \begin{frame}[fragile]
   \frametitle{Definition}
   \begin{block}{Counting intersections}
-\begin{verbatim}
+\begin{lstlisting}
 -- max number of intersections of n lines
 nisect :: Integer -> Integer
 nisect 0   = 0
 nisect n | n > 0 = nisect (n - 1) + n - 1
-\end{verbatim}
+\end{lstlisting}
   \end{block}
 \end{frame}
 %----------------------------------------------------------------------
